# mocking-static-methods

./: .gitignore  00_START_HERE.md  ABP_WORKFLOW.md  AGENT_TOOLS_EXAMPLES.md  ANALYSIS_REPORT.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_MANIFEST.md  LICENSE  QUICK_REFERENCE.md  QUICK_START.md  README.md  TEST_ORCHESTRATOR_INDEX.md  TEST_ORCHESTRATOR_OVERVIEW.md  TEST_ORCHESTRATOR_README.md  TEST_ORCHESTRATOR_REFINEMENT.md  agent_tools.py  mocking-static-methods.sln  orchestrator.py  requirements.txt  test_metrics.csv  test_orchestrator.py  test_orchestrator_example.sh
.devcontainer/: devcontainer.json
StaticCallAnalyzer/: ComplexityCalculator.cs  Filters.cs  Program.cs  StaticCallAnalyzer.csproj  StaticCallConfig.cs
csharptune/: .gitignore  README.md  pyproject.toml  slurm.sh
csharptune/src/cst/: cli.py  models.py  training.py
csharptune/test_prompts/: ex1.txt  ex2.txt  ex3.txt
