[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "csharptune"
authors = [
    {name = "Don Bennett", email = "dwb312@msstate.edu"},
]
description = ""
version = "2025.12.07"
readme = "README.md"

dependencies = [
    "click",
    "numpy",
    "torch",
    "transformers",
    "accelerate",
    "datasets",
    "evaluate",
    "scikit-learn"
]
requires-python = ">=3.9"
license = "MIT"

[project.scripts]
cst = "cst.cli:main"

